@@ -16,7 +16,7 @@
 * Обновлен итальянский перевод (автор Lord Maius);
 * ffmpeg git-8097e5b2;
 * libopus 1.0.1 git-a8f04b23;
-* Little-CMS git-b58cb85e;
+* Little-CMS git-d2d902b9;
 * libwebp 0.2.1 git-69e25906;
 * libopenjpeg 2.0.0 svn rev.2301;
 * MediaInfo 0.7.62+ svn rev.5436;
